// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SignInFactorOnePasswordCard snapshots > renders default state 1`] = `
<div>
  <div
    class="cl-cardBox cl-signIn-password 🔒️ css-lesbzj"
  >
    <div
      class="cl-card cl-signIn-password 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="cl-logoBox 🔒️ css-nu1iui"
        >
          <a
            class="css-1xlmx23-Link"
            href="https://dashboard.clerk.com/"
          >
            <img
              alt="TestApp"
              class="cl-logoImage 🔒️ css-oc7xeg"
              crossorigin="anonymous"
              src="https://images.clerk.com/uploaded/img_logo.png"
            />
          </a>
        </div>
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.password.title"
          >
            Enter your password
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-qqe4hk"
            data-color="secondary"
            data-localization-key="signIn.password.subtitle"
            data-variant="body"
          >
            Enter the password associated with your account
          </p>
          <div
            class="cl-identityPreview 🔒️ css-1389xgv"
          >
            <p
              class="cl-identityPreviewText 🔒️ css-j1oc9"
              data-color="secondary"
              data-variant="body"
            >
              user@example.com
            </p>
            <button
              aria-label="Edit"
              class="cl-identityPreviewEditButton cl-button 🔒️ css-xn52nr"
              data-color="primary"
              data-variant="link"
            >
              <span
                class="cl-identityPreviewEditButtonIcon 🔒️ css-1ctxcx1-Icon"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-1f4p2mz"
      >
        <form
          class="cl-form 🔒️ css-ji79b9"
        >
          <button
            aria-hidden="true"
            style="visibility: hidden; position: absolute;"
            type="submit"
          />
          <input
            id="identifier-field"
            name="identifier"
            readonly=""
            style="display: none;"
            value="user@example.com"
          />
          <div
            class="cl-formFieldRow cl-formFieldRow__password 🔒️ css-k7wlaf"
          >
            <div
              class="cl-formField cl-formField__password 🔒️ css-10rdw13"
            >
              <div
                class="css-17uj465"
              >
                <div
                  class="cl-formFieldLabelRow cl-formFieldLabelRow__password 🔒️ css-66mzqw"
                >
                  <label
                    class="cl-formFieldLabel cl-formFieldLabel__password-field 🔒️ css-h16r45-FormLabel"
                    data-localization-key="formFieldLabel__password"
                    for="password-field"
                  >
                    Password
                  </label>
                  <a
                    class="cl-formFieldAction cl-formFieldAction__password 🔒️ css-1vj5m21-Link"
                    data-localization-key="formFieldAction__forgotPassword"
                    href=""
                  >
                    Forgot password?
                  </a>
                </div>
                <div
                  class="cl-formFieldInputGroup 🔒️ css-i1u4p8"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="false"
                    class="cl-formFieldInput cl-input cl-formFieldInput__password cl-input__password 🔒️ css-nvk3g"
                    data-feedback="info"
                    data-variant="default"
                    id="password-field"
                    name="password"
                    placeholder="Enter your password"
                    type="password"
                    value=""
                  />
                  <button
                    aria-label="Show password"
                    class="cl-formFieldInputShowPasswordButton cl-button 🔒️ css-poejws"
                    data-color="primary"
                    data-variant="ghost"
                  >
                    <span
                      class="cl-formFieldInputShowPasswordIcon 🔒️ css-1ctxcx1-Icon"
                    />
                  </button>
                </div>
              </div>
              <span
                aria-atomic="true"
                aria-live="polite"
                class="css-5ur8x"
              />
              <div
                class="css-z8mie1"
                style="height: 0px; position: relative;"
              />
            </div>
          </div>
          <button
            class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
            data-color="primary"
            data-localization-key="formButtonPrimary"
            data-variant="solid"
          >
            <span
              class="css-2iusy0"
            >
              Continue
              <span
                class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
              />
            </span>
          </button>
        </form>
        <div
          class="cl-footerAction cl-footerAction__alternativeMethods 🔒️ css-h2zfvr"
        >
          <a
            class="cl-footerActionLink 🔒️ css-12ndoxu-Link"
            data-localization-key="signIn.password.actionLink"
            href="https://clerk.com/"
          >
            Use another method
          </a>
        </div>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignInFactorOnePasswordCard snapshots > renders with alternative methods link 1`] = `
<div>
  <div
    class="cl-cardBox cl-signIn-password 🔒️ css-lesbzj"
  >
    <div
      class="cl-card cl-signIn-password 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="cl-logoBox 🔒️ css-nu1iui"
        >
          <a
            class="css-1xlmx23-Link"
            href="https://dashboard.clerk.com/"
          >
            <img
              alt="TestApp"
              class="cl-logoImage 🔒️ css-oc7xeg"
              crossorigin="anonymous"
              src="https://images.clerk.com/uploaded/img_logo.png"
            />
          </a>
        </div>
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.password.title"
          >
            Enter your password
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-qqe4hk"
            data-color="secondary"
            data-localization-key="signIn.password.subtitle"
            data-variant="body"
          >
            Enter the password associated with your account
          </p>
          <div
            class="cl-identityPreview 🔒️ css-1389xgv"
          >
            <p
              class="cl-identityPreviewText 🔒️ css-j1oc9"
              data-color="secondary"
              data-variant="body"
            >
              user@example.com
            </p>
            <button
              aria-label="Edit"
              class="cl-identityPreviewEditButton cl-button 🔒️ css-xn52nr"
              data-color="primary"
              data-variant="link"
            >
              <span
                class="cl-identityPreviewEditButtonIcon 🔒️ css-1ctxcx1-Icon"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-1f4p2mz"
      >
        <form
          class="cl-form 🔒️ css-ji79b9"
        >
          <button
            aria-hidden="true"
            style="visibility: hidden; position: absolute;"
            type="submit"
          />
          <input
            id="identifier-field"
            name="identifier"
            readonly=""
            style="display: none;"
            value="user@example.com"
          />
          <div
            class="cl-formFieldRow cl-formFieldRow__password 🔒️ css-k7wlaf"
          >
            <div
              class="cl-formField cl-formField__password 🔒️ css-10rdw13"
            >
              <div
                class="css-17uj465"
              >
                <div
                  class="cl-formFieldLabelRow cl-formFieldLabelRow__password 🔒️ css-66mzqw"
                >
                  <label
                    class="cl-formFieldLabel cl-formFieldLabel__password-field 🔒️ css-h16r45-FormLabel"
                    data-localization-key="formFieldLabel__password"
                    for="password-field"
                  >
                    Password
                  </label>
                  <a
                    class="cl-formFieldAction cl-formFieldAction__password 🔒️ css-1vj5m21-Link"
                    data-localization-key="formFieldAction__forgotPassword"
                    href=""
                  >
                    Forgot password?
                  </a>
                </div>
                <div
                  class="cl-formFieldInputGroup 🔒️ css-i1u4p8"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="false"
                    class="cl-formFieldInput cl-input cl-formFieldInput__password cl-input__password 🔒️ css-nvk3g"
                    data-feedback="info"
                    data-variant="default"
                    id="password-field"
                    name="password"
                    placeholder="Enter your password"
                    type="password"
                    value=""
                  />
                  <button
                    aria-label="Show password"
                    class="cl-formFieldInputShowPasswordButton cl-button 🔒️ css-poejws"
                    data-color="primary"
                    data-variant="ghost"
                  >
                    <span
                      class="cl-formFieldInputShowPasswordIcon 🔒️ css-1ctxcx1-Icon"
                    />
                  </button>
                </div>
              </div>
              <span
                aria-atomic="true"
                aria-live="polite"
                class="css-5ur8x"
              />
              <div
                class="css-z8mie1"
                style="height: 0px; position: relative;"
              />
            </div>
          </div>
          <button
            class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
            data-color="primary"
            data-localization-key="formButtonPrimary"
            data-variant="solid"
          >
            <span
              class="css-2iusy0"
            >
              Continue
              <span
                class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
              />
            </span>
          </button>
        </form>
        <div
          class="cl-footerAction cl-footerAction__alternativeMethods 🔒️ css-h2zfvr"
        >
          <a
            class="cl-footerActionLink 🔒️ css-12ndoxu-Link"
            data-localization-key="signIn.password.actionLink"
            href="https://clerk.com/"
          >
            Use another method
          </a>
        </div>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignInFactorOnePasswordCard snapshots > renders with identifier 1`] = `
<div>
  <div
    class="cl-cardBox cl-signIn-password 🔒️ css-lesbzj"
  >
    <div
      class="cl-card cl-signIn-password 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="cl-logoBox 🔒️ css-nu1iui"
        >
          <a
            class="css-1xlmx23-Link"
            href="https://dashboard.clerk.com/"
          >
            <img
              alt="TestApp"
              class="cl-logoImage 🔒️ css-oc7xeg"
              crossorigin="anonymous"
              src="https://images.clerk.com/uploaded/img_logo.png"
            />
          </a>
        </div>
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.password.title"
          >
            Enter your password
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-qqe4hk"
            data-color="secondary"
            data-localization-key="signIn.password.subtitle"
            data-variant="body"
          >
            Enter the password associated with your account
          </p>
          <div
            class="cl-identityPreview 🔒️ css-1389xgv"
          >
            <p
              class="cl-identityPreviewText 🔒️ css-j1oc9"
              data-color="secondary"
              data-variant="body"
            >
              hello@clerk.dev
            </p>
            <button
              aria-label="Edit"
              class="cl-identityPreviewEditButton cl-button 🔒️ css-xn52nr"
              data-color="primary"
              data-variant="link"
            >
              <span
                class="cl-identityPreviewEditButtonIcon 🔒️ css-1ctxcx1-Icon"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-1f4p2mz"
      >
        <form
          class="cl-form 🔒️ css-ji79b9"
        >
          <button
            aria-hidden="true"
            style="visibility: hidden; position: absolute;"
            type="submit"
          />
          <input
            id="identifier-field"
            name="identifier"
            readonly=""
            style="display: none;"
            value="hello@clerk.dev"
          />
          <div
            class="cl-formFieldRow cl-formFieldRow__password 🔒️ css-k7wlaf"
          >
            <div
              class="cl-formField cl-formField__password 🔒️ css-10rdw13"
            >
              <div
                class="css-17uj465"
              >
                <div
                  class="cl-formFieldLabelRow cl-formFieldLabelRow__password 🔒️ css-66mzqw"
                >
                  <label
                    class="cl-formFieldLabel cl-formFieldLabel__password-field 🔒️ css-h16r45-FormLabel"
                    data-localization-key="formFieldLabel__password"
                    for="password-field"
                  >
                    Password
                  </label>
                  <a
                    class="cl-formFieldAction cl-formFieldAction__password 🔒️ css-1vj5m21-Link"
                    data-localization-key="formFieldAction__forgotPassword"
                    href=""
                  >
                    Forgot password?
                  </a>
                </div>
                <div
                  class="cl-formFieldInputGroup 🔒️ css-i1u4p8"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="false"
                    class="cl-formFieldInput cl-input cl-formFieldInput__password cl-input__password 🔒️ css-nvk3g"
                    data-feedback="info"
                    data-variant="default"
                    id="password-field"
                    name="password"
                    placeholder="Enter your password"
                    type="password"
                    value=""
                  />
                  <button
                    aria-label="Show password"
                    class="cl-formFieldInputShowPasswordButton cl-button 🔒️ css-poejws"
                    data-color="primary"
                    data-variant="ghost"
                  >
                    <span
                      class="cl-formFieldInputShowPasswordIcon 🔒️ css-1ctxcx1-Icon"
                    />
                  </button>
                </div>
              </div>
              <span
                aria-atomic="true"
                aria-live="polite"
                class="css-5ur8x"
              />
              <div
                class="css-z8mie1"
                style="height: 0px; position: relative;"
              />
            </div>
          </div>
          <button
            class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
            data-color="primary"
            data-localization-key="formButtonPrimary"
            data-variant="solid"
          >
            <span
              class="css-2iusy0"
            >
              Continue
              <span
                class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
              />
            </span>
          </button>
        </form>
        <div
          class="cl-footerAction cl-footerAction__alternativeMethods 🔒️ css-h2zfvr"
        >
          <a
            class="cl-footerActionLink 🔒️ css-12ndoxu-Link"
            data-localization-key="signIn.password.actionLink"
            href="https://clerk.com/"
          >
            Use another method
          </a>
        </div>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignInFactorOnePasswordCard snapshots > renders with reset password factor 1`] = `
<div>
  <div
    class="cl-cardBox cl-signIn-password 🔒️ css-lesbzj"
  >
    <div
      class="cl-card cl-signIn-password 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="cl-logoBox 🔒️ css-nu1iui"
        >
          <a
            class="css-1xlmx23-Link"
            href="https://dashboard.clerk.com/"
          >
            <img
              alt="TestApp"
              class="cl-logoImage 🔒️ css-oc7xeg"
              crossorigin="anonymous"
              src="https://images.clerk.com/uploaded/img_logo.png"
            />
          </a>
        </div>
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.password.title"
          >
            Enter your password
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-qqe4hk"
            data-color="secondary"
            data-localization-key="signIn.password.subtitle"
            data-variant="body"
          >
            Enter the password associated with your account
          </p>
          <div
            class="cl-identityPreview 🔒️ css-1389xgv"
          >
            <p
              class="cl-identityPreviewText 🔒️ css-j1oc9"
              data-color="secondary"
              data-variant="body"
            >
              user@example.com
            </p>
            <button
              aria-label="Edit"
              class="cl-identityPreviewEditButton cl-button 🔒️ css-xn52nr"
              data-color="primary"
              data-variant="link"
            >
              <span
                class="cl-identityPreviewEditButtonIcon 🔒️ css-1ctxcx1-Icon"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-1f4p2mz"
      >
        <form
          class="cl-form 🔒️ css-ji79b9"
        >
          <button
            aria-hidden="true"
            style="visibility: hidden; position: absolute;"
            type="submit"
          />
          <input
            id="identifier-field"
            name="identifier"
            readonly=""
            style="display: none;"
            value="user@example.com"
          />
          <div
            class="cl-formFieldRow cl-formFieldRow__password 🔒️ css-k7wlaf"
          >
            <div
              class="cl-formField cl-formField__password 🔒️ css-10rdw13"
            >
              <div
                class="css-17uj465"
              >
                <div
                  class="cl-formFieldLabelRow cl-formFieldLabelRow__password 🔒️ css-66mzqw"
                >
                  <label
                    class="cl-formFieldLabel cl-formFieldLabel__password-field 🔒️ css-h16r45-FormLabel"
                    data-localization-key="formFieldLabel__password"
                    for="password-field"
                  >
                    Password
                  </label>
                  <a
                    class="cl-formFieldAction cl-formFieldAction__password 🔒️ css-1vj5m21-Link"
                    data-localization-key="formFieldAction__forgotPassword"
                    href=""
                  >
                    Forgot password?
                  </a>
                </div>
                <div
                  class="cl-formFieldInputGroup 🔒️ css-i1u4p8"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="false"
                    class="cl-formFieldInput cl-input cl-formFieldInput__password cl-input__password 🔒️ css-nvk3g"
                    data-feedback="info"
                    data-variant="default"
                    id="password-field"
                    name="password"
                    placeholder="Enter your password"
                    type="password"
                    value=""
                  />
                  <button
                    aria-label="Show password"
                    class="cl-formFieldInputShowPasswordButton cl-button 🔒️ css-poejws"
                    data-color="primary"
                    data-variant="ghost"
                  >
                    <span
                      class="cl-formFieldInputShowPasswordIcon 🔒️ css-1ctxcx1-Icon"
                    />
                  </button>
                </div>
              </div>
              <span
                aria-atomic="true"
                aria-live="polite"
                class="css-5ur8x"
              />
              <div
                class="css-z8mie1"
                style="height: 0px; position: relative;"
              />
            </div>
          </div>
          <button
            class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
            data-color="primary"
            data-localization-key="formButtonPrimary"
            data-variant="solid"
          >
            <span
              class="css-2iusy0"
            >
              Continue
              <span
                class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
              />
            </span>
          </button>
        </form>
        <div
          class="cl-footerAction cl-footerAction__alternativeMethods 🔒️ css-h2zfvr"
        >
          <a
            class="cl-footerActionLink 🔒️ css-12ndoxu-Link"
            data-localization-key="signIn.password.actionLink"
            href="https://clerk.com/"
          >
            Use another method
          </a>
        </div>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignInFactorOnePasswordCard snapshots > renders without alternative methods (having trouble) 1`] = `
<div>
  <div
    class="cl-cardBox cl-signIn-password 🔒️ css-lesbzj"
  >
    <div
      class="cl-card cl-signIn-password 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="cl-logoBox 🔒️ css-nu1iui"
        >
          <a
            class="css-1xlmx23-Link"
            href="https://dashboard.clerk.com/"
          >
            <img
              alt="TestApp"
              class="cl-logoImage 🔒️ css-oc7xeg"
              crossorigin="anonymous"
              src="https://images.clerk.com/uploaded/img_logo.png"
            />
          </a>
        </div>
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.password.title"
          >
            Enter your password
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-qqe4hk"
            data-color="secondary"
            data-localization-key="signIn.password.subtitle"
            data-variant="body"
          >
            Enter the password associated with your account
          </p>
          <div
            class="cl-identityPreview 🔒️ css-1389xgv"
          >
            <p
              class="cl-identityPreviewText 🔒️ css-j1oc9"
              data-color="secondary"
              data-variant="body"
            >
              user@example.com
            </p>
            <button
              aria-label="Edit"
              class="cl-identityPreviewEditButton cl-button 🔒️ css-xn52nr"
              data-color="primary"
              data-variant="link"
            >
              <span
                class="cl-identityPreviewEditButtonIcon 🔒️ css-1ctxcx1-Icon"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-1f4p2mz"
      >
        <form
          class="cl-form 🔒️ css-ji79b9"
        >
          <button
            aria-hidden="true"
            style="visibility: hidden; position: absolute;"
            type="submit"
          />
          <input
            id="identifier-field"
            name="identifier"
            readonly=""
            style="display: none;"
            value="user@example.com"
          />
          <div
            class="cl-formFieldRow cl-formFieldRow__password 🔒️ css-k7wlaf"
          >
            <div
              class="cl-formField cl-formField__password 🔒️ css-10rdw13"
            >
              <div
                class="css-17uj465"
              >
                <div
                  class="cl-formFieldLabelRow cl-formFieldLabelRow__password 🔒️ css-66mzqw"
                >
                  <label
                    class="cl-formFieldLabel cl-formFieldLabel__password-field 🔒️ css-h16r45-FormLabel"
                    data-localization-key="formFieldLabel__password"
                    for="password-field"
                  >
                    Password
                  </label>
                </div>
                <div
                  class="cl-formFieldInputGroup 🔒️ css-i1u4p8"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="false"
                    class="cl-formFieldInput cl-input cl-formFieldInput__password cl-input__password 🔒️ css-nvk3g"
                    data-feedback="info"
                    data-variant="default"
                    id="password-field"
                    name="password"
                    placeholder="Enter your password"
                    type="password"
                    value=""
                  />
                  <button
                    aria-label="Show password"
                    class="cl-formFieldInputShowPasswordButton cl-button 🔒️ css-poejws"
                    data-color="primary"
                    data-variant="ghost"
                  >
                    <span
                      class="cl-formFieldInputShowPasswordIcon 🔒️ css-1ctxcx1-Icon"
                    />
                  </button>
                </div>
              </div>
              <span
                aria-atomic="true"
                aria-live="polite"
                class="css-5ur8x"
              />
              <div
                class="css-z8mie1"
                style="height: 0px; position: relative;"
              />
            </div>
          </div>
          <button
            class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
            data-color="primary"
            data-localization-key="formButtonPrimary"
            data-variant="solid"
          >
            <span
              class="css-2iusy0"
            >
              Continue
              <span
                class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
              />
            </span>
          </button>
        </form>
        <div
          class="cl-footerAction cl-footerAction__havingTrouble 🔒️ css-h2zfvr"
        >
          <a
            class="cl-footerActionLink 🔒️ css-12ndoxu-Link"
            data-localization-key="signIn.alternativeMethods.actionLink"
            href="https://clerk.com/"
          >
            Get help
          </a>
        </div>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
